--- a/src/style.css
+++ b/src/style.css
@@ -1,1 +1,78 @@
+/* body {
+    background-image: url("https://static.vecteezy.com/system/resources/previews/025/755/011/non_2x/versus-vs-comics-style-background-vertical-template-pink-and-blue-comic-book-style-background-classic-pop-art-style-superhero-battle-intro-gradient-background-16-9-aspect-ratio-free-vector.jpg");
+    background-color: #cccccc;
+   }
 
+#hero-a-image {
+    position: relative;
+    top: 45%;
+    left: 25%;
+} 
+
+#hero-a-name {
+  position: absolute;
+  top: 60%;
+  left: 25%;
+  font-size: 40px;
+}
+
+#hero-b-image {
+    position: absolute;
+    top: 45%;
+    right: 25%;
+} 
+
+#hero-b-name {
+  position: absolute;
+  top: 60%;
+  right: 25%;
+  font-size: 40px;
+}
+
+#fight {
+    position: absolute;
+    top: 70%;
+    left: 50%;
+}
+
+
+button {
+    background-color: #FF0000;
+  animation: bgColor 5s infinite linear;
+  width: 200px;
+  height: 100px;
+}
+@keyframes bgColor {
+    50% {
+        background-color: antiquewhite;
+    }
+    100% {
+        background-color: #0000FF;
+    }
+}
+/* @keyframes bgColor {
+  12.5% {
+    background-color: #FF0000;
+  }
+  25% {
+    background-color: #FFA500;
+  }
+  37.5% {
+    background-color: #FFFF00;
+  }
+  50% {
+    background-color: #7FFF00;
+  }
+  62.5% {
+    background-color: #00FFFF;
+  }
+  75% {
+    background-color: #0000FF;
+  }
+  87.5% {
+    background-color: #9932CC;
+  }
+  100% {
+    background-color: #FF1493;
+  }
+} */
