--- a/src/style.css
+++ b/src/style.css
@@ -1,79 +1,127 @@
 body {
-    background-image: url("https://static.vecteezy.com/system/resources/previews/025/755/011/non_2x/versus-vs-comics-style-background-vertical-template-pink-and-blue-comic-book-style-background-classic-pop-art-style-superhero-battle-intro-gradient-background-16-9-aspect-ratio-free-vector.jpg");
-    background-color: #cccccc;
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-attachment: fixed;
-    margin: 0;
-    padding: 0;
-    font-family: Arial, sans-serif;
-}
-
-#hero-list {
-    display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
-    gap: 10px;
-    padding: 10px;
-}
-
-.hero-image {
-    flex: 0 1 auto;
-    max-width: 100px;
-    height: auto;
-    cursor: pointer;
-}
-
-.selected-heroes-container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin: 20px 0;
-}
-
-#hero-a-info, #hero-b-info {
-    width: 30%;
-    margin: 0 10%;
-}
-
-.hero-info .hero-image {
-    width: 100%;
-    max-width: 200px;
-    display: block;
-    margin: 0 auto;
-}
-
-.hero-info .hero-name {
-    font-size: 40px;
-    margin-top: 10px;
+  background-image: url("https://static.vecteezy.com/system/resources/previews/025/755/011/non_2x/versus-vs-comics-style-background-vertical-template-pink-and-blue-comic-book-style-background-classic-pop-art-style-superhero-battle-intro-gradient-background-16-9-aspect-ratio-free-vector.jpg");
+  background-color: #cccccc;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  margin: 10px;
+  padding: 50px;
+  font-family: Arial, sans-serif;
 }
 
 .grayscale {
-    filter: grayscale(100%);
+  filter: grayscale (100%);
+}
+
+
+h1 {
+  background: url();
+  font-size: 1000%;
+  text-align: center;
+  margin: 100px auto;
+  font-family: Impact, Charcoal, Chomixi;
+  font-size: 1000%;
+  letter-spacing: px;
+  word-spacing: 2.6px;
+  color: #000000;
+  font-weight: 400;
+  text-decoration: none solid rgb(68, 68, 68);
+  font-style: normal;
+  font-variant: small-caps;
+  text-transform: capitalize;
+}
+
+#hero-list {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  flex-grow: 1;
+  gap: 400px;
+  padding: 150px;
+  /* height: 500px;
+  width: 400px; */
+}
+
+.hero-image {
+  border: 10px solid;
+  flex: 0 1 auto;
+  width: 250px;
+  height: auto;
+  cursor: pointer;
+}
+
+.selected-heroes-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 20px 0;
+}
+
+#hero-a-info, #hero-b-info {
+  size: 100%;
+  width: 100%;
+  margin: 0 10%;
+  position: relative;
+}
+
+#hero-a-image, #hero-b-image {
+  padding: 10px;
+  width: 70%;
+  height: 1200px;
+  position: relative;
+  -webkit-box-shadow: 8px 8px 14px 13px rgba(0,0,0,0.81); 
+  box-shadow: 8px 8px 14px 13px rgba(0,0,0,0.81);
+}
+
+.hero-info .hero-image {
+  width: 50%;
+  max-width: 200px;
+  display: block;
+  margin: 0 auto;
+}
+
+.hero-info .hero-name {
+  font-size: 40px;
+  margin-top: 10px;
 }
 
 #fight {
-    background-color: #FF0000;
-    animation: bgColor 5s infinite linear;
-    width: 200px;
-    height: 100px;
-    display: block;
-    margin: 20px auto;
-    cursor: pointer;
+  background-color: #FF0000;
+  animation: bgColor 5s infinite linear;
+  width: 500px;
+  height: 300px;
+  display: block;
+  margin: 20px auto;
+  cursor: pointer;
 }
 
 button {
-    font-size: 20px;
-    color: white;
-    border: none;
-    border-radius: 5px;
+  size: 50%;
+  font-size: 100px;
+  color: white;
+  border: none;
+  border-radius: 5px;
 }
 
 @keyframes bgColor {
-    0%, 100% {
-        background-color: #FF0000;
-    }
-    50% {
-        background-color: #0000FF;
-    }
+  0%, 100% {
+      background-color: #FF0000;
+  }
+  50% {
+      background-color: #0000FF;
+  }
+}
+
+h2 {
+  font-size: 70px;
+}
+
+h3 {
+  font-size: 35px;
+}
+
+#result {
+  text-align: center;
+  font-size: 100px;
+  height: 400%;
 }
