--- a/src/style.css
+++ b/src/style.css
@@ -10,7 +10,7 @@ body {
 }
 
 .grayscale {
-  filter: grayscale (100%);
+  filter: grayscale(100%);
 }
 
 
@@ -88,11 +88,14 @@ h1 {
 #fight {
   background-color: #FF0000;
   animation: bgColor 5s infinite linear;
-  width: 500px;
-  height: 300px;
+  width: 700px;
+  height: 350px;
   display: block;
-  margin: 20px auto;
+  margin: 200px auto;
   cursor: pointer;
+  font-size: 8rem;
+  text-shadow: 5px 6px 5px #FFE400;
+
 }
 
 button {
@@ -101,6 +104,9 @@ button {
   color: white;
   border: none;
   border-radius: 5px;
+  margin: 50px auto;
+  text-shadow: 3px -1px 10px rgba(28,110,164,0.81);
+  border: 7px double #1C6EA4;
 }
 
 @keyframes bgColor {
@@ -124,4 +130,75 @@ h3 {
   text-align: center;
   font-size: 100px;
   height: 400%;
+}
+
+/* #add-hero-form {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 20px 0;
+} */
+
+.new-hero-form {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 20px 0;
+}
+
+form {
+  margin: 1rem 0;
+  width: 1500px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  
+}
+
+input,
+textarea {
+  font-size: 2rem;
+  font-family: "Arial Black", Gadget, sans-serif;
+  /* font-size: 18px; */
+  letter-spacing: 8px;
+  word-spacing: 20px;
+  color: #000000;
+  font-weight: 700;
+  text-decoration: none solid rgb(68, 68, 68);
+  font-style: italic;
+  font-variant: small-caps;
+  text-transform: none;
+  line-height: 2em;
+  border: 1px solid black;
+  background-color: white;
+  padding: 0.5rem;
+  margin: 0.25rem 0;
+  width: 100%;
+}
+
+input[type="submit"] {
+  color: white;
+  border: 1px solid white;
+  background-color: black;
+  cursor: pointer;
+  transition: all 0.3s;
+}
+
+input[type="submit"]:active {
+  background-color: gray;
+}
+
+#footer {
+  text-align: center;
+  font-family: "Comic Sans MS", cursive, sans-serif;
+font-size: 34px;
+letter-spacing: 5.4px;
+word-spacing: 3.6px;
+color: #000000;
+font-weight: 700;
+text-decoration: none solid rgb(68, 68, 68);
+font-style: normal;
+font-variant: small-caps;
+text-transform: none;
 }
